--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/header.css" type="text/css" />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -28,11 +29,21 @@
         <p><span class="arrow">&#8595</span> <span class="bold"> Write</span> a new tweet</p>
       </div>
     </nav>
-    <div>
-      <p>This is nothing but a test</p>
-    </div>
+    <header>
+      <div>
+          <img src="/images/profile-hex.png"> 
+      </div>
+      <br>
+      <div>
+          <h2>Your Name</h2>
+      </div>
+  </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <div class="tweet">Hello this is the first test</div>
+      <div class="tweet">This is the second test</div>
+      <div class="tweet">This is the final and final and final test</div>
+    </main>
   </body>
 </html>
