Add JQuery file for char counter

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,6 @@
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
-      <br>
       <div>
           <h2>Your Name</h2>
       </div>
@@ -58,4 +57,5 @@
       This is just for space
     </footer>
   </body>
+  <script src="./scripts/composer-char-counter.js"></script>
 </html>
