--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="./styles/header.css" type="text/css" />
     <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="./styles/tweet.css" type="text/css" />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -30,14 +31,14 @@
         <p><span class="arrow">&#8595</span> <span class="bold"> Write</span> a new tweet</p>
       </div>
     </nav>
-    <header>
+    <header class="main-header">
       <div>
           <img src="/images/profile-hex.png"> 
       </div>
       <div>
           <h2>Your Name</h2>
       </div>
-  </header>
+    </header>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
@@ -52,10 +53,49 @@
           </div>
         </form>
       </section>
+      <div>
+        <article class="tweet-container">
+          <header>
+            <div>
+              <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="test">
+              <p class="user-name">Newton</p>
+            </div>
+            <p class="user-ID">@SirIsaac</p>
+          </header>
+          <div class="tweet-content">
+            <p>If I have seen further it is by standing on the shoulders of giants</p>
+          </div>
+          <footer>
+            <p>10 Days ago</p>
+            <div class="icons">
+              <span>&#10084</span>
+              <span>&#8617</span>
+              <span>&#9873</span>
+            </div>
+          </footer>
+        </article>
+        <article class="tweet-container">
+          <header>
+            <div>
+              <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="test">
+              <p class="user-name">Newton</p>
+            </div>
+            <p class="user-ID">@SirIsaac</p>
+          </header>
+          <div class="tweet-content">
+            <p>If I have seen further it is by standing on the shoulders of giants</p>
+          </div>
+          <footer>
+            <p>10 Days ago</p>
+            <div class="icons">
+              <span>&#10084</span>
+              <span>&#8617</span>
+              <span>&#9873</span>
+            </div>
+          </footer>
+        </article>
+      </div>
     </main>
-    <footer>
-      This is just for space
-    </footer>
   </body>
   <script src="./scripts/composer-char-counter.js"></script>
 </html>
