--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,18 @@
     <title>Tweeter - Home Page</title>
 
     <!-- External CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,700;1,300;1,700&display=swap" rel="stylesheet">
+    
+
+    <!-- App CSS -->
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="./styles/header.css" type="text/css" />
     <link rel="stylesheet" href="./styles/new-tweet.css" type="text/css" />
     <link rel="stylesheet" href="./styles/tweet.css" type="text/css" />
-
-    <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -53,49 +55,10 @@
           </div>
         </form>
       </section>
-      <div>
-        <article class="tweet-container">
-          <header>
-            <div>
-              <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="test">
-              <p class="user-name">Newton</p>
-            </div>
-            <p class="user-ID">@SirIsaac</p>
-          </header>
-          <div class="tweet-content">
-            <p>If I have seen further it is by standing on the shoulders of giants</p>
-          </div>
-          <footer>
-            <p>10 Days ago</p>
-            <div class="icons">
-              <span>&#10084</span>
-              <span>&#8617</span>
-              <span>&#9873</span>
-            </div>
-          </footer>
-        </article>
-        <article class="tweet-container">
-          <header>
-            <div>
-              <img src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-512.png" alt="test">
-              <p class="user-name">Newton</p>
-            </div>
-            <p class="user-ID">@SirIsaac</p>
-          </header>
-          <div class="tweet-content">
-            <p>If I have seen further it is by standing on the shoulders of giants</p>
-          </div>
-          <footer>
-            <p>10 Days ago</p>
-            <div class="icons">
-              <span>&#10084</span>
-              <span>&#8617</span>
-              <span>&#9873</span>
-            </div>
-          </footer>
-        </article>
-      </div>
+      <div class="tweet-feed">
+  </div>
     </main>
   </body>
   <script src="./scripts/composer-char-counter.js"></script>
+
 </html>
