Add button element to nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <nav>
       <div class="nav-elems">
         <span id="logo">tweeter</span>
-        <p><span class="arrow">&#8595</span> <span class="bold"> Write</span> a new tweet</p>
+        <button id="compose-tweet"><span class="arrow">&#8595</span> <span class="bold"> Write</span> a new tweet</button>
       </div>
     </nav>
     <header class="main-header">
