--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     
 
     <!-- App CSS -->
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="./styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="./styles/header.css" type="text/css" />
@@ -46,7 +47,7 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
-        <div class="" id="error-cont">
+        <div id="error-cont">
           <div id="testing">
             <h3></h3>
           </div>
