--- a/public/index.html
+++ b/public/index.html
@@ -35,34 +35,37 @@
         <button id="compose-tweet"><span class="arrow">&#8595</span> <span class="bold"> Write</span> a new tweet</button>
       </div>
     </nav>
-    <header class="main-header">
-      <div>
-          <img src="/images/profile-hex.png"> 
-      </div>
-      <div>
-          <h2>Your Name</h2>
-      </div>
-    </header>
-
-    <!-- Page-specific (main) content here -->
-    <main class="container">
-      <section class="new-tweet">
-        <div id="error-cont">
-          <div id="testing">
-            <h3></h3>
-          </div>
+    <div id="media-test">
+      <header class="main-header">
+        <div>
+            <img src="/images/profile-hex.png"> 
         </div>
-        <form action="/tweets" method="post" id="test">
-          <label for="tweet-text">What are you humming about?</label>
-          <textarea name="text" id="tweet-text"></textarea>
-          <div class="under-form">
-            <button type="submit">Tweet</button>
-            <output name="counter" class="counter" for="tweet-text">140</output>
+        <div>
+            <h2>Hosam Dahrooge</h2>
+        </div>
+      </header>
+  
+      <!-- Page-specific (main) content here -->
+      <main class="container">
+        <section class="new-tweet">
+          <div id="error-cont">
+            <div id="testing">
+              <h3></h3>
+            </div>
           </div>
-        </form>
-      </section>
-      <div class="tweet-feed"></div>
-    </main>
+          <form action="/tweets" method="post" id="test">
+            <label for="tweet-text">What are you humming about?</label>
+            <textarea name="text" id="tweet-text"></textarea>
+            <div class="under-form">
+              <button type="submit">Tweet</button>
+              <output name="counter" class="counter" for="tweet-text">140</output>
+            </div>
+          </form>
+        </section>
+        <div class="tweet-feed"></div>
+      </main>
+    </div>
+    
   </body>
   <script src="./scripts/composer-char-counter.js"></script>
 
