change placeholder id name for error-text

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       <main class="container">
         <section class="new-tweet">
           <div id="error-cont">
-            <div id="testing">
+            <div id="error-text-cont">
               <h3></h3>
             </div>
           </div>
