change main and header container name

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <button id="compose-tweet"><span class="arrow">&#8595</span> <span class="bold"> Write</span> a new tweet</button>
       </div>
     </nav>
-    <div id="media-test">
+    <div id="content-container">
       <header class="main-header">
         <div>
             <img src="/images/profile-hex.png"> 
